	PR target/89261 	* config/i386/i386-protos.h (ix86_data_alignment): Change 	the second argument type to unsigned int. 	* config/i386/i386.c (ix86_data_alignment): Change "align" 	argument type to unsigned int.

testsuite/ChangeLog:

	PR target/89261
	* gcc.target/i386/pr89261.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@270623 138bc75d-0d04-0410-961f-82ee72b054a4